Fix button generator and make visible

--- a/styles.css
+++ b/styles.css
@@ -26,5 +26,5 @@ body{
 {
     height: 125px;
     width: 125px;
-
+    background-color: antiquewhite;
 }
